# krazy

./: .codespellrc  .emacs-dirvars  .pre-commit-config.yaml  INSTALL.txt  Install.txt  License.txt  Makefile.PL  README  ReadMe.txt  TODO  foodata  index.html  install.sh  krazy2  krazy2all  krazy2ebn  krazy2xml  params.json
conf/: settings.yaml
cppchecks/: CMakeLists.txt  design.xmi  krazymacros.h.cmake
cppchecks/c++parser/: CMakeLists.txt  DefaultVisitor.cpp
cppchecks/checks/: CMakeLists.txt
cppchecks/checks/dpointercheck/: CMakeLists.txt  dpointeranalyzer.cpp  dpointercheck.h  dpointercheckoutputformatter.cpp  typedef.h
cppchecks/checks/dpointercheck/tests/: dpointercheck-test.sh
cppchecks/checkutil/: CMakeLists.txt  analyzer.h  check.cpp  check.h  checkengine.cpp  checkengine.h  outputformatter.h
cppchecks/cplusplus/: CMakeLists.txt
cppchecks/cplusplus/cppmodel/: CMakeLists.txt  binder.cpp  binder.h  charblock.h  cppmodel-config.h  cpppreprocessor.cpp  cpppreprocessor.h  diagnosticmessage.cpp  diagnosticmessage.h  document.cpp  document.h  location.h  macrouse.cpp  macrouse.h  nameprettyprinter.cpp  nameprettyprinter.h  namespacebinding.cpp  namespacebinding.h  overview.cpp  overview.h  typeprettyprinter.cpp  typeprettyprinter.h
cppchecks/cplusplus/lib/: CMakeLists.txt
cppchecks/cplusplus/parser/: AST.cpp  ASTfwd.h  CMakeLists.txt  CPlusPlusForwardDeclarations.h  DefaultVisitor.h  PrettyPrinter.h
cppchecks/cplusplus/preprocessor/: CMakeLists.txt  CppDocument.cpp  CppDocument.h  CppPreprocessor.cpp  CppPreprocessor.h  Macro.h  PreprocessorClient.h  PreprocessorEnvironment.h  pp-cctype.h  pp-engine.cpp  pp-engine.h  pp-macro-expander.cpp  pp-macro-expander.h
cppchecks/cplusplus/tools/: CMakeLists.txt  NamePrettyPrinter.h  Overview.h  TypePrettyPrinter.h
cppchecks/dpointercheck/: CMakeLists.txt  class.cpp  class.h  dpointeranalyzer.cpp  dpointeranalyzer.h  dpointercheck.cpp  dpointercheck.h  dpointercheckastvisitor.h  dpointercheckoutputformatter.cpp  dpointercheckoutputformatter.h  main.cpp  typedef.cpp  typedef.h
cppchecks/dpointercheck/tests/: test.h
cppchecks/gui/: CMakeLists.txt  astitem.cc  astitem.h  asttreebuilder.cc  asttreebuilder.h  asttreeitem.cc  asttreeitem.h  asttreemodel.cc  asttreemodel.h  dumpast.h  dumpscope.h  includestreemodel.cc  includestreemodel.h  main.cc  messagetablemodel.cc  messagetablemodel.h  parseresultwidget.cc  parseresultwidget.h  parseresultwidget.ui  symboltreemodel.cc  symboltreemodel.h  treebuilder.cc  treebuilder.h
cppchecks/shared/: CMakeLists.txt  check.cpp  check.h  checkengine.h  checkvisitor.h
cppchecks/test/: CMakeLists.txt  cpp-test.cpp
cppchecks/tests/: inheritance-test.cc  simple-test-1.cpp  simple-test-2.cpp
doc/: Makefile  krazyrc.pod
extras/: Makefile
extras/c++/: Makefile  camelcase  crud  defines  kdebug  multiclasses  null  qenums  qmacros  qmath  style  tipsandthis
extras/cmake/: Makefile  description.txt  style
extras/designer/: Makefile  description.txt  tipsandthis
extras/desktop/: Makefile  description.txt
extras/general/: Makefile  contractions  copyright-reuse  crud  description.txt  license-reuse
extras/json/: Makefile  description.txt
extras/kconfigxt/: Makefile  description.txt  tipsandthis
extras/kpartgui/: Makefile  description.txt
extras/perl/: Makefile  description.txt
extras/python/: Makefile  description.txt  style
extras/qss/: Makefile  (+1 more)
helpers/: Makefile  getInstalledHeaders.pl  krazyfindfiles.pl  krazyprojecttype.pl  stripComments.pl
oplugins/: README  foreach  visibility
plugins/: Makefile  TEMPLATE.pl
sets/: Makefile
share/: kcfg.dtd  kcfg.xsd  kpartgui.dtd  kxmlgui.xsd
sql/: drop-ebn-db-tables.sql  ebn-db.sql
src/: src.pro
src/desktop-file-utils-0.14/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.in
src/desktop-file-utils-0.14/misc/: Makefile.am  Makefile.in
src/desktop-file-utils-0.14/src/: Makefile.am  Makefile.in  install.c  keyfileutils.c  keyfileutils.h  update-desktop-database.c  validate.c  validate.h  validator.c
src/desktop-file-utils-0.16/: ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  configure  configure.in
src/desktop-file-utils-0.16/misc/: Makefile.in
src/desktop-file-utils-0.16/src/: Makefile.am  Makefile.in  install.c  keyfileutils.c  keyfileutils.h  mimeutils.c  update-desktop-database.c  validate.c  validate.h  validator.c
src/desktop-file-utils-0.18/: HACKING  Makefile.am  Makefile.in  NEWS  aclocal.m4  configure  configure.ac
src/desktop-file-utils-0.18/man/: Makefile.am  Makefile.in  desktop-file-install.1  desktop-file-validate.1  update-desktop-database.1
src/desktop-file-utils-0.18/misc/: Makefile.in
src/desktop-file-utils-0.18/src/: Makefile.am  Makefile.in  install.c  mimeutils.c  update-desktop-database.c  validate.c  validator.c
src/desktop-file-utils-0.22/src/: Makefile.am  Makefile.in  install.c  mimeutils.c  mimeutils.h  update-desktop-database.c  validate.c  validate.h
src/desktop-file-utils-0.26/: ChangeLog  NEWS  README  autogen.sh  configure.ac  install.py  meson.build  meson_options.txt
src/desktop-file-utils-0.26/man/: Makefile.am  desktop-file-validate.1  meson.build
src/desktop-file-utils-0.26/misc/: Makefile.am
src/desktop-file-utils-0.26/src/: keyfileutils.c  keyfileutils.h  meson.build  mimeutils.c  update-desktop-database.c  validate.c  validate.h  validator.c
src/desktop-file-utils-0.28/: .gitlab-ci.yml  AUTHORS  ChangeLog  ChangeLog.pre-git  HACKING  NEWS  README  changelog.py  desktop-file-utils.doap  meson.build
src/desktop-file-utils-0.28/man/: desktop-file-validate.1  meson.build
src/desktop-file-utils-0.28/misc/: desktop-entry-mode.el  meson.build
src/desktop-file-utils-0.28/src/: install.c  meson.build  mimeutils.h  update-desktop-database.c  validate.c  validate.h  validator.c
stylesheets/: README  functions.xsl  globalvars.xsl  krazy-main.xsl  krazy2ebn.xsl
testdata/: .krazy  checkTestData.sh  foo.cpp
tplugins/: README  classes  constmethods  doxygenation  kclasses  null  style
(+187 files in other folders)
